# serializer version: 1
# name: ProcessListExportsSiaeTest.test_list_for_siae_exports_view
  '''
  <div class="alert alert-info mt-3" id="besoin-dun-chiffre">
              <p class="mb-0">
                  <i aria-hidden="true" class="ri-information-line mr-1"></i>
                  <b>Besoin d'un chiffre ?</b>
              </p>
              
                  <p class="mb-0">
                      Accédez aux <a href="/stats/siae/hiring" rel="noopener" target="_blank">données de recrutement de votre structure</a> (non nominatives) compilées, calculées et mises à jour quotidiennement.
                  </p>
              
          </div>
  '''
# ---
# name: ProcessListPrescriberTest.test_list_for_prescriber_pe_exports_view
  '''
  <div class="alert alert-info mt-3" id="besoin-dun-chiffre">
              <p class="mb-0">
                  <i aria-hidden="true" class="ri-information-line mr-1"></i>
                  <b>Besoin d'un chiffre ?</b>
              </p>
              
                  <p class="mb-0">
                      Accédez aux données de votre agence (non nominatives) compilées, calculées et mises à jour quotidiennement :
                  </p>
                  <ul>
                      <li>
                          <a href="/stats/pe/state/main" rel="noopener" target="_blank">Voir les données de l'ensemble de l'état des candidatures orientées</a>
                      </li>
                      <li>
                          <a href="/stats/pe/conversion/main" rel="noopener" target="_blank">Voir les données du taux de transformation des candidatures</a>
                      </li>
                  </ul>
              
          </div>
  '''
# ---
# name: TestListForSiae.test_warns_about_long_awaiting_applications[JOB SEEKER - no warnings]
  '''
  <section aria-labelledby="results">
                          <div class="d-flex flex-column flex-sm-row align-items-sm-center">
                              <h2 class="mb-0 flex-grow-1" id="results">
                                  
                                      3 <strong>résultats</strong>
                                  
                              </h2>
                              <div>
                                  
  
                                  
                              </div>
                          </div>
  
                          
                              
                                  <div class="c-card card my-4 has-links-inside">
                                      
                                      
  
  <div class="card-header">
      <p class="mb-0">
          <b>Jacques HENRY</b>
          chez
          <b>
              <a href="/siae/42/card?back_url=/apply/job_seeker/list">
                  Hit pit
              </a>
          </b>
          
      </p>
      <p class="mb-0">
          <span class="text-secondary fs-sm">30 mars 2023 à 02:00</span>
          
      </p>
      <hr class="mb-0"/>
  </div>
  
                                      
  
  <div class="card-body">
      <div class="row">
          <div class="col-12 col-md-6 col-lg-4 mb-3 mb-lg-0">
              
                  <p class="font-weight-bold mb-1">Métier recherché :</p>
                  
                      <p class="fs-sm card-text">Candidature spontanée</p>
                  
              
          </div>
          <div class="col-12 col-md-6 col-lg-4 mb-3 mb-lg-0">
              <p class="font-weight-bold mb-1">Envoyée par :</p>
              <p class="fs-sm card-text">
                  
                      Max THROUGHPUT
                  
  
                  
                      
                  
  
                  
              </p>
          </div>
          <div class="col-12 col-md-12 col-lg-4 pl-lg-0">
              <p class="font-weight-bold mb-1">Statut :</p>
              <p class="fs-sm card-text">
                  <span class="badge badge-sm badge-pill text-wrap mb-1 badge-info" id="state_11111111-1111-1111-1111-111111111111">Nouvelle candidature</span>
                  
              </p>
          </div>
      </div>
  </div>
  
                                      <div class="card-body collapse" id="answer0">
                                          <p class="font-weight-bold mb-1">Message de candidature :</p>
                                          <div class="fs-sm"><p>Third application</p></div>
                                          
                                      </div>
                                      <div class="card-footer text-right">
                                          <a aria-controls="answer0" aria-expanded="false" aria-label="Plus d'informations sur cette candidature" class="btn btn-sm btn-outline-primary" data-target="#answer0" data-toggle="collapse" href="#">Plus d'informations</a>
                                      </div>
                                  </div>
                              
                                  <div class="c-card card my-4 has-links-inside">
                                      
                                      
  
  <div class="card-header">
      <p class="mb-0">
          <b>Jacques HENRY</b>
          chez
          <b>
              <a href="/siae/42/card?back_url=/apply/job_seeker/list">
                  Hit pit
              </a>
          </b>
          
      </p>
      <p class="mb-0">
          <span class="text-secondary fs-sm">18 mars 2023 à 01:00</span>
          
      </p>
      <hr class="mb-0"/>
  </div>
  
                                      
  
  <div class="card-body">
      <div class="row">
          <div class="col-12 col-md-6 col-lg-4 mb-3 mb-lg-0">
              
                  <p class="font-weight-bold mb-1">Métier recherché :</p>
                  
                      <p class="fs-sm card-text">Candidature spontanée</p>
                  
              
          </div>
          <div class="col-12 col-md-6 col-lg-4 mb-3 mb-lg-0">
              <p class="font-weight-bold mb-1">Envoyée par :</p>
              <p class="fs-sm card-text">
                  
                      Max THROUGHPUT
                  
  
                  
                      
                  
  
                  
              </p>
          </div>
          <div class="col-12 col-md-12 col-lg-4 pl-lg-0">
              <p class="font-weight-bold mb-1">Statut :</p>
              <p class="fs-sm card-text">
                  <span class="badge badge-sm badge-pill text-wrap mb-1 badge-info" id="state_22222222-2222-2222-2222-222222222222">Nouvelle candidature</span>
                  
              </p>
          </div>
      </div>
  </div>
  
                                      <div class="card-body collapse" id="answer1">
                                          <p class="font-weight-bold mb-1">Message de candidature :</p>
                                          <div class="fs-sm"><p>Second application</p></div>
                                          
                                      </div>
                                      <div class="card-footer text-right">
                                          <a aria-controls="answer1" aria-expanded="false" aria-label="Plus d'informations sur cette candidature" class="btn btn-sm btn-outline-primary" data-target="#answer1" data-toggle="collapse" href="#">Plus d'informations</a>
                                      </div>
                                  </div>
                              
                                  <div class="c-card card my-4 has-links-inside">
                                      
                                      
  
  <div class="card-header">
      <p class="mb-0">
          <b>Jacques HENRY</b>
          chez
          <b>
              <a href="/siae/42/card?back_url=/apply/job_seeker/list">
                  Hit pit
              </a>
          </b>
          
      </p>
      <p class="mb-0">
          <span class="text-secondary fs-sm">16 février 2023 à 01:00</span>
          
      </p>
      <hr class="mb-0"/>
  </div>
  
                                      
  
  <div class="card-body">
      <div class="row">
          <div class="col-12 col-md-6 col-lg-4 mb-3 mb-lg-0">
              
                  <p class="font-weight-bold mb-1">Métier recherché :</p>
                  
                      <p class="fs-sm card-text">Candidature spontanée</p>
                  
              
          </div>
          <div class="col-12 col-md-6 col-lg-4 mb-3 mb-lg-0">
              <p class="font-weight-bold mb-1">Envoyée par :</p>
              <p class="fs-sm card-text">
                  
                      Max THROUGHPUT
                  
  
                  
                      
                  
  
                  
              </p>
          </div>
          <div class="col-12 col-md-12 col-lg-4 pl-lg-0">
              <p class="font-weight-bold mb-1">Statut :</p>
              <p class="fs-sm card-text">
                  <span class="badge badge-sm badge-pill text-wrap mb-1 badge-info" id="state_33333333-3333-3333-3333-333333333333">Nouvelle candidature</span>
                  
              </p>
          </div>
      </div>
  </div>
  
                                      <div class="card-body collapse" id="answer2">
                                          <p class="font-weight-bold mb-1">Message de candidature :</p>
                                          <div class="fs-sm"><p>First application</p></div>
                                          
                                      </div>
                                      <div class="card-footer text-right">
                                          <a aria-controls="answer2" aria-expanded="false" aria-label="Plus d'informations sur cette candidature" class="btn btn-sm btn-outline-primary" data-target="#answer2" data-toggle="collapse" href="#">Plus d'informations</a>
                                      </div>
                                  </div>
                              
  
                              
  
  
  
                          
                      </section>
  '''
# ---
# name: TestListForSiae.test_warns_about_long_awaiting_applications[PRESCRIBER - warnings for 2222 and 3333]
  '''
  <section aria-labelledby="results">
                          <div class="d-flex flex-column flex-sm-row align-items-sm-center">
                              <h2 class="mb-0 flex-grow-1" id="results">
                                  
                                      3 <strong>résultats</strong>
                                  
                              </h2>
                              <div>
                                  
      
          <a aria-label="Exporter la liste de candidatures" class="btn btn-ico btn-secondary mt-3 mt-md-0" href="/apply/prescriber/list/exports">
              <i aria-hidden="true" class="ri-download-2-fill"></i>
              <span>Exporter</span>
          </a>
      
  
  
                                  
                              </div>
                          </div>
  
                          
                              
                                  <div class="c-card card my-4 has-links-inside">
                                      
                                      
  
  <div class="card-header">
      <p class="mb-0">
          <b>J… H…</b>
          chez
          <b>
              <a href="/siae/42/card?back_url=/apply/prescriber/list">
                  Hit pit
              </a>
          </b>
          
      </p>
      <p class="mb-0">
          <span class="text-secondary fs-sm">30 mars 2023 à 02:00</span>
          
      </p>
      <hr class="mb-0"/>
  </div>
  
                                      
  
  <div class="card-body">
      <div class="row">
          <div class="col-12 col-md-6 col-lg-4 mb-3 mb-lg-0">
              
                  <p class="font-weight-bold mb-1">Métier recherché :</p>
                  
                      <p class="fs-sm card-text">Candidature spontanée</p>
                  
              
          </div>
          <div class="col-12 col-md-6 col-lg-4 mb-3 mb-lg-0">
              <p class="font-weight-bold mb-1">Envoyée par :</p>
              <p class="fs-sm card-text">
                  
                      Vous
                  
  
                  
                      
                  
  
                  
              </p>
          </div>
          <div class="col-12 col-md-12 col-lg-4 pl-lg-0">
              <p class="font-weight-bold mb-1">Statut :</p>
              <p class="fs-sm card-text">
                  <span class="badge badge-sm badge-pill text-wrap mb-1 badge-info" id="state_11111111-1111-1111-1111-111111111111">Nouvelle candidature</span>
                  
              </p>
          </div>
      </div>
  </div>
  
                                      <div class="card-footer text-right">
                                          <a aria-label="Plus d’informations sur la candidature de J… H…" class="btn btn-sm btn-outline-primary" href="/apply/11111111-1111-1111-1111-111111111111/prescriber/details?back_url=/apply/prescriber/list">
                                              Plus d’informations
                                          </a>
                                      </div>
                                  </div>
                              
                                  <div class="c-card card my-4 has-links-inside">
                                      
                                      
  
  <div class="card-header">
      <p class="mb-0">
          <b>J… H…</b>
          chez
          <b>
              <a href="/siae/42/card?back_url=/apply/prescriber/list">
                  Hit pit
              </a>
          </b>
          
      </p>
      <p class="mb-0">
          <span class="text-secondary fs-sm">18 mars 2023 à 01:00</span>
          
              <br/>
              <span class="text-danger fs-sm font-weight-bold">
                  En attente de réponse depuis 3 semaines.
              </span>
          
      </p>
      <hr class="mb-0"/>
  </div>
  
                                      
  
  <div class="card-body">
      <div class="row">
          <div class="col-12 col-md-6 col-lg-4 mb-3 mb-lg-0">
              
                  <p class="font-weight-bold mb-1">Métier recherché :</p>
                  
                      <p class="fs-sm card-text">Candidature spontanée</p>
                  
              
          </div>
          <div class="col-12 col-md-6 col-lg-4 mb-3 mb-lg-0">
              <p class="font-weight-bold mb-1">Envoyée par :</p>
              <p class="fs-sm card-text">
                  
                      Vous
                  
  
                  
                      
                  
  
                  
              </p>
          </div>
          <div class="col-12 col-md-12 col-lg-4 pl-lg-0">
              <p class="font-weight-bold mb-1">Statut :</p>
              <p class="fs-sm card-text">
                  <span class="badge badge-sm badge-pill text-wrap mb-1 badge-info" id="state_22222222-2222-2222-2222-222222222222">Nouvelle candidature</span>
                  
              </p>
          </div>
      </div>
  </div>
  
                                      <div class="card-footer text-right">
                                          <a aria-label="Plus d’informations sur la candidature de J… H…" class="btn btn-sm btn-outline-primary" href="/apply/22222222-2222-2222-2222-222222222222/prescriber/details?back_url=/apply/prescriber/list">
                                              Plus d’informations
                                          </a>
                                      </div>
                                  </div>
                              
                                  <div class="c-card card my-4 has-links-inside">
                                      
                                      
  
  <div class="card-header">
      <p class="mb-0">
          <b>J… H…</b>
          chez
          <b>
              <a href="/siae/42/card?back_url=/apply/prescriber/list">
                  Hit pit
              </a>
          </b>
          
      </p>
      <p class="mb-0">
          <span class="text-secondary fs-sm">16 février 2023 à 01:00</span>
          
              <br/>
              <span class="text-danger fs-sm font-weight-bold">
                  En attente de réponse depuis 8 semaines.
              </span>
          
      </p>
      <hr class="mb-0"/>
  </div>
  
                                      
  
  <div class="card-body">
      <div class="row">
          <div class="col-12 col-md-6 col-lg-4 mb-3 mb-lg-0">
              
                  <p class="font-weight-bold mb-1">Métier recherché :</p>
                  
                      <p class="fs-sm card-text">Candidature spontanée</p>
                  
              
          </div>
          <div class="col-12 col-md-6 col-lg-4 mb-3 mb-lg-0">
              <p class="font-weight-bold mb-1">Envoyée par :</p>
              <p class="fs-sm card-text">
                  
                      Vous
                  
  
                  
                      
                  
  
                  
              </p>
          </div>
          <div class="col-12 col-md-12 col-lg-4 pl-lg-0">
              <p class="font-weight-bold mb-1">Statut :</p>
              <p class="fs-sm card-text">
                  <span class="badge badge-sm badge-pill text-wrap mb-1 badge-info" id="state_33333333-3333-3333-3333-333333333333">Nouvelle candidature</span>
                  
              </p>
          </div>
      </div>
  </div>
  
                                      <div class="card-footer text-right">
                                          <a aria-label="Plus d’informations sur la candidature de J… H…" class="btn btn-sm btn-outline-primary" href="/apply/33333333-3333-3333-3333-333333333333/prescriber/details?back_url=/apply/prescriber/list">
                                              Plus d’informations
                                          </a>
                                      </div>
                                  </div>
                              
  
                              
  
  
  
                          
                      </section>
  '''
# ---
# name: TestListForSiae.test_warns_about_long_awaiting_applications[SIAE - warnings for 2222 and 3333]
  '''
  <section aria-labelledby="results">
                          <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-md-between mb-3 mb-md-4">
                              <h3 class="h4 mb-0" id="results">
                                  
                                      3 <strong>résultats</strong>
                                  
                              </h3>
                              <div aria-label="Actions sur les candidatures" class="flex-column flex-md-row btn-group btn-group-sm btn-group-action" role="group">
                                  
      
          <a aria-label="Exporter la liste de candidatures" class="btn btn-ico btn-secondary mt-3 mt-md-0" href="/apply/siae/list/exports">
              <i aria-hidden="true" class="ri-download-2-fill"></i>
              <span>Exporter</span>
          </a>
      
  
  
                                  
                              </div>
                          </div>
  
                          
                              
                                  <div class="c-card card my-3 my-md-4 has-links-inside">
                                      
  
  <div class="card-body">
  
      
  <div class="fs-sm d-flex flex-column flex-md-row align-items-center mb-3">
      <span class="text-secondary order-2 order-md-1 mr-auto">
          Émise le 30 mars 2023 par
  
          
              
                  <strong class="mr-2">Max THROUGHPUT</strong>
              
              
                  <i aria-hidden="true" class="ri-group-line mr-2"></i>Orienteur
              
          
  
      </span>
      
      <span class="order-1 order-md-2 ml-auto"><span class="badge badge-sm badge-pill text-wrap mb-1 badge-info" id="state_11111111-1111-1111-1111-111111111111">Nouvelle candidature</span></span>
  </div>
  <hr class="my-3"/>
  
      <div>
          
              <i class="ri-briefcase-line ri-xl mr-1"></i><span class="font-weight-bold mr-1 mr-md-2">Candidature spontanée</span>
          
      </div>
  
  
  
      <hr/>
      <div class="row">
          <div class="col-12 col-lg-5 mb-3 mb-lg-0">
              <h3 class="h3 mb-1">
                  Jacques HENRY
              </h3>
              
  
              
                  
                      
                          
                              <span class="badge badge-xs badge-pill badge-success-lighter text-success">
                                  <i aria-hidden="true" class="ri-check-line"></i>
                                  Éligible à l’IAE
                              </span>
                          
                      
  
                  
              
          </div>
          
      </div>
  
  </div>
  
                                      <div class="card-footer text-right bg-light">
                                          
                                          <a aria-label="Gérer la candidature de Jacques HENRY" class="btn btn-sm btn-outline-primary bg-white" href="/apply/11111111-1111-1111-1111-111111111111/siae/details?back_url=/apply/siae/list">
                                              Voir sa candidature
                                          </a>
                                      </div>
                                  </div>
  
                                  
                                      
  
  <div class="card my-3 my-md-4 px-4 alert-dismissible-once d-none container rounded border-important bg-important-lightest" id="rdvi-promo">
      <div class="row">
          <div class="d-none d-md-block col-md-auto align-self-center">
              <img alt="" class="m-auto" height="90" loading="lazy" src="/static/img/logo_rdv_insertion.svg"/>
          </div>
          <div class="col-12 col-md p-0">
              <div class="card-header pt-4">
                  <span class="badge badge-pill badge-important badge-xs">Nouveau service</span>
                  <button aria-label="Fermer" class="close" data-dismiss="alert" data-target="#rdvi-promo" type="button">
                      <i class="ri-close-line"></i>
                  </button>
              </div>
              <div class="card-body pb-4">
                  <h4>RDV-Insertion simplifie les rendez-vous avec vos candidats</h4>
                  <p>
                      Besoin d'un outil de prise de RDV par mail et/ou SMS avec gestion des rappels pour
                      augmenter le taux de présence de vos candidats aux entretiens individuels et
                      aux informations collectives ?
                  </p>
                  <a aria-label="Découvrir le service RDV-Insertion dans un nouvel onglet" class="btn btn-ico btn-link p-0" href="https://tally.so/r/mK5aPk" rel="noopener" target="_blank">
                      <span>Je découvre</span>
                      <i class="ri-external-link-line ri-lg"></i>
                  </a>
              </div>
          </div>
      </div>
  </div>
  
                                  
  
                              
                                  <div class="c-card card my-3 my-md-4 has-links-inside">
                                      
  
  <div class="card-body">
  
      
  <div class="fs-sm d-flex flex-column flex-md-row align-items-center mb-3">
      <span class="text-secondary order-2 order-md-1 mr-auto">
          Émise le 18 mars 2023 par
  
          
              
                  <strong class="mr-2">Max THROUGHPUT</strong>
              
              
                  <i aria-hidden="true" class="ri-group-line mr-2"></i>Orienteur
              
          
  
      </span>
      
      <span class="order-1 order-md-2 ml-auto"><span class="badge badge-sm badge-pill text-wrap mb-1 badge-info" id="state_22222222-2222-2222-2222-222222222222">Nouvelle candidature</span></span>
  </div>
  <hr class="my-3"/>
  
      <div>
          
              <i class="ri-briefcase-line ri-xl mr-1"></i><span class="font-weight-bold mr-1 mr-md-2">Candidature spontanée</span>
          
      </div>
  
  
  
      <hr/>
      <div class="row">
          <div class="col-12 col-lg-5 mb-3 mb-lg-0">
              <h3 class="h3 mb-1">
                  Jacques HENRY
              </h3>
              
  
              
                  
                      
                          
                              <span class="badge badge-xs badge-pill badge-success-lighter text-success">
                                  <i aria-hidden="true" class="ri-check-line"></i>
                                  Éligible à l’IAE
                              </span>
                          
                      
  
                  
              
          </div>
          
      </div>
  
  </div>
  
                                      <div class="card-footer text-right bg-light">
                                          
                                              <span class="d-inline-flex align-items-center text-warning fs-sm">
                                                  <i class="ri-time-line ri-lg mr-1"></i>
                                                  En attente de réponse depuis 3 semaines.
                                              </span>
                                          
                                          <a aria-label="Gérer la candidature de Jacques HENRY" class="btn btn-sm btn-outline-primary bg-white" href="/apply/22222222-2222-2222-2222-222222222222/siae/details?back_url=/apply/siae/list">
                                              Voir sa candidature
                                          </a>
                                      </div>
                                  </div>
  
                                  
  
                              
                                  <div class="c-card card my-3 my-md-4 has-links-inside">
                                      
  
  <div class="card-body">
  
      
  <div class="fs-sm d-flex flex-column flex-md-row align-items-center mb-3">
      <span class="text-secondary order-2 order-md-1 mr-auto">
          Émise le 16 février 2023 par
  
          
              
                  <strong class="mr-2">Max THROUGHPUT</strong>
              
              
                  <i aria-hidden="true" class="ri-group-line mr-2"></i>Orienteur
              
          
  
      </span>
      
      <span class="order-1 order-md-2 ml-auto"><span class="badge badge-sm badge-pill text-wrap mb-1 badge-info" id="state_33333333-3333-3333-3333-333333333333">Nouvelle candidature</span></span>
  </div>
  <hr class="my-3"/>
  
      <div>
          
              <i class="ri-briefcase-line ri-xl mr-1"></i><span class="font-weight-bold mr-1 mr-md-2">Candidature spontanée</span>
          
      </div>
  
  
  
      <hr/>
      <div class="row">
          <div class="col-12 col-lg-5 mb-3 mb-lg-0">
              <h3 class="h3 mb-1">
                  Jacques HENRY
              </h3>
              
  
              
                  
                      
                          
                              <span class="badge badge-xs badge-pill badge-success-lighter text-success">
                                  <i aria-hidden="true" class="ri-check-line"></i>
                                  Éligible à l’IAE
                              </span>
                          
                      
  
                  
              
          </div>
          
      </div>
  
  </div>
  
                                      <div class="card-footer text-right bg-light">
                                          
                                              <span class="d-inline-flex align-items-center text-warning fs-sm">
                                                  <i class="ri-time-line ri-lg mr-1"></i>
                                                  En attente de réponse depuis 8 semaines.
                                              </span>
                                          
                                          <a aria-label="Gérer la candidature de Jacques HENRY" class="btn btn-sm btn-outline-primary bg-white" href="/apply/33333333-3333-3333-3333-333333333333/siae/details?back_url=/apply/siae/list">
                                              Voir sa candidature
                                          </a>
                                      </div>
                                  </div>
  
                                  
  
                              
  
                              
  
  
  
                          
                      </section>
  '''
# ---
